--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,11 +12,11 @@
 
       <div class="header-content">
         <ul>
-          <li><a routerLink="machine">Machine</a></li>
-          <li><a routerLink="company">Company</a></li>
-          <li><a routerLink="invoice">Invoice</a></li>
-          <li><a routerLink="report">Report</a></li>
-          <li><a routerLink="account">Account</a></li>
+          <li><a routerLink="machine" routerLinkActive="active">Machine</a></li>
+          <li><a routerLink="company" routerLinkActive="active">Company</a></li>
+          <li><a routerLink="invoice" routerLinkActive="active">Invoice</a></li>
+          <li><a routerLink="report" routerLinkActive="active">Report</a></li>
+          <li><a routerLink="account" routerLinkActive="active">Account</a></li>
         </ul>
       </div>
     </nav>
