--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,500;0,700;1,700&display=swap");
 
-* {
+/* * {
   padding: 0px;
   margin: 0px;
   text-decoration: none;
@@ -42,7 +42,7 @@ nav {
 .nav-bar ul {
   display: flex;
   /* align-items: center; */
-  justify-content: left;
+/* justify-content: left;
   margin-right: 20px;
 }
 
@@ -74,7 +74,26 @@ a:hover {
   display: none;
 }
 
-@media (max-width: 950px) {
+@media only screen and (max-width: 990px) {
+  .menu {
+    position: fixed;
+    right: 0;
+    top: 64px;
+    width: 280px;
+    height: 100%;
+    background: #4d0000;
+  }
+
+  .menu ul {
+    display: block;
+    text-align: left;
+    margin: 0;
+    padding: 10px 0 10px 25px;
+    border-bottom: 1px solid;
+  }
+}
+
+@media (max-width: 992px) {
   label.logo {
     font-size: 20px;
     padding-left: 50px;
@@ -84,8 +103,8 @@ a:hover {
   }
 }
 
-@media (max-width: 850px) {
-}
+  @media (max-width: 850px) {} */
+
 /* .footer { */
 /* background-color: rgb(245, 201, 201);
 } */
@@ -131,3 +150,59 @@ a:hover {
   background: rgb(250, 216, 216);
   transition: 0.5s;
 } */
+
+.header {
+  background: #4d0000;
+  height: 75px;
+  width: 100%;
+  color: white;
+}
+
+.menu {
+  margin-top: 12px;
+}
+
+.menu ul {
+  padding: 0;
+  margin: 0;
+}
+
+menu ul li {
+  list-style-type: none;
+  color: white;
+  display: inline-block;
+  font-size: 20px;
+  margin-left: 24px;
+}
+
+menu ul li:hover {
+  color: rgb(250, 216, 216);
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 999px) {
+  .menu {
+    position: fixed;
+    right: 0px;
+    top: 64px;
+    width: 280px;
+    height: 100%;
+    background: #4d0000;
+  }
+
+  .menu ul li {
+    display: block;
+    text-align: left;
+    margin: 0;
+    padding: 10px 0 10px 26px;
+    border-bottom: 1px solid white;
+  }
+
+  .menu-icon {
+    width: 40px;
+    height: 2px;
+    background: white;
+    display: block;
+  }
+}
