--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,10 @@
-<script
-  src="https://kit.fontawesome.com/a076d05399.js"
-  crossorigin="anonymous"
-></script>
-
-<div class="container">
+<!-- <div class="container">
   <div class="nav-bar">
     <nav>
       <div class="logo-content">
         <label class="logo">LOGO</label>
       </div>
+      
 
       <div class="header-content">
         <ul>
@@ -22,12 +18,43 @@
     </nav>
   </div>
 
-  <!-- <div class="footer">
-    <div class="button-content">
-      <button class="active" class="cancel-button">Cancel</button>
-      <button class="active" class="save-button">Save</button>
+ 
+</div> -->
+
+<header>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3 col-sm-3 col-3">
+        <div class="logo">
+          <label class="logo">LOGO</label>
+        </div>
+      </div>
+      <div class="col-md-9 col-sm-9 col-9" text-end>
+        <div class="menu-icon">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="menu">
+          <ul>
+            <li>
+              <a routerLink="machine" routerLinkActive="active">Machine</a>
+            </li>
+            <li>
+              <a routerLink="company" routerLinkActive="active">Company</a>
+            </li>
+            <li>
+              <a routerLink="invoice" routerLinkActive="active">Invoice</a>
+            </li>
+            <li><a routerLink="report" routerLinkActive="active">Report</a></li>
+            <li>
+              <a routerLink="account" routerLinkActive="active">Account</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
-  </div> -->
-</div>
+  </div>
+</header>
 
 <router-outlet></router-outlet>
